# stm32_usb_vdm

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32G071RBTX_FLASH.ld  implementation_plan.md.resolved  nucleo-g071rb-usbpd.ioc  software_arch_1.md  walkthrough.md.resolved
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g0xx_it.h
Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  syscalls.c
Drivers/BSP/X-NUCLEO-SRC1M1/: Release_Notes.html  Release_Notes.md  src1m1_conf_template.h  src1m1_usbpd_pwr.c
Middlewares/ST/STM32_USBPD_Library/Core/src/: usbpd_dpm_core.c
Middlewares/ST/STM32_USBPD_Library/Devices/STM32G0XX/inc/: usbpd_devices_conf_template.h
Projects/EWARM/: Project.eww  stm32g071xx_flash.icf  stm32g071xx_sram.icf
TCPP/: STMicroelectronics.X-CUBE-TCPP_conf.h
TCPP/App/: app_tcpp.c
USBPD/App/: usbpd.c  usbpd_dpm_core.c  usbpd_os_port.h  usbpd_pdo_defs.h  usbpd_pwr_if.c  usbpd_pwr_if.h
cmake/: arm-none-eabi.cmake
